// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WarningModal should render correctly for all run 4 warning 1`] = `
<div
  className="alert alert-danger"
  role="alert"
  style={
    Object {
      "width": "100%",
    }
  }
>
  You have entered a four as all run rather than a boundary.  Is this correct?
  <div>
    <button
      className="btn btn-danger"
      onClick={[MockFunction]}
      style={
        Object {
          "marginLeft": "10px",
          "marginRight": "10px",
        }
      }
    >
      Yes
    </button>
    <button
      className="btn btn-default"
      onClick={[MockFunction]}
      style={
        Object {
          "marginLeft": "10px",
          "marginRight": "10px",
        }
      }
    >
      No
    </button>
  </div>
</div>
`;

exports[`WarningModal should render correctly for all run 6 warning 1`] = `
<div
  className="alert alert-danger"
  role="alert"
  style={
    Object {
      "width": "100%",
    }
  }
>
  You have entered a six as all run rather than a boundary.  Is this correct?
  <div>
    <button
      className="btn btn-danger"
      onClick={[MockFunction]}
      style={
        Object {
          "marginLeft": "10px",
          "marginRight": "10px",
        }
      }
    >
      Yes
    </button>
    <button
      className="btn btn-default"
      onClick={[MockFunction]}
      style={
        Object {
          "marginLeft": "10px",
          "marginRight": "10px",
        }
      }
    >
      No
    </button>
  </div>
</div>
`;

exports[`WarningModal should render correctly for not complete over warning 1`] = `
<div
  className="alert alert-danger"
  role="alert"
  style={
    Object {
      "width": "100%",
    }
  }
>
  There has not been six legal deliveries in this over.  Do you still want to complete it?
  <div>
    <button
      className="btn btn-danger"
      onClick={[MockFunction]}
      style={
        Object {
          "marginLeft": "10px",
          "marginRight": "10px",
        }
      }
    >
      Yes
    </button>
    <button
      className="btn btn-default"
      onClick={[MockFunction]}
      style={
        Object {
          "marginLeft": "10px",
          "marginRight": "10px",
        }
      }
    >
      No
    </button>
  </div>
</div>
`;
